--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ bot:
   username: kotlin_template_bot
   token:
 spring:
+  flyway:
+    baseline-on-migrate: true
   datasource:
     url: jdbc:postgresql://localhost:5432/kotlin_template
     username: postgres
